Included test folder and adjusted .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .idea/
 target/
 main/
-test/
+API testing homework
+PlaceLab API testing.postman_collection.json
+RESTful Booker API.postman_collection.json
